--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-   <title>Horiseon - A Marketing Agency</title>
+    <title>Horiseon - A Marketing Agency</title>
   </head>
   <body>
     <header>
@@ -24,14 +24,22 @@
         </ul>
       </nav>
     </header>
-    </div>
-    <div class="hero"></div>
+    <figure>
+      <img
+        class="hero"
+        src="assets/images/digital-marketing-meeting.jpg"
+        alt="A group of people gather for a buisness meeting around a table"
+      />
+    </figure>
     <div class="content">
       <div class="search-engine-optimization">
-        <img
-          src="./assets/images/search-engine-optimization.jpg"
-          class="float-left"
-        />
+        <figure>
+          <img
+            src="./assets/images/search-engine-optimization.jpg"
+            class="float-left"
+            alt="A desktop with different objects such as coffee , laptop, coloring pencils and a notebook"
+          />
+        </figure>
         <h2>Search Engine Optimization</h2>
         <p>
           The dominance of mobile internet use means that users are searching
@@ -44,10 +52,13 @@
         id="online-reputation-management"
         class="online-reputation-management"
       >
-        <img
-          src="./assets/images/online-reputation-management.jpg"
-          class="float-right"
-        />
+        <figure>
+          <img
+            src="./assets/images/online-reputation-management.jpg"
+            class="float-right"
+            alt="A person checking their phone as well as laptop with the words REPUTATION inside of it"
+          />
+        </figure>
         <h2>Online Reputation Management</h2>
         <p>
           The web is full of opinions, and some of these can be negative. Social
@@ -58,10 +69,14 @@
         </p>
       </div>
       <div id="social-media-marketing" class="social-media-marketing">
-        <img
-          src="./assets/images/social-media-marketing.jpg"
-          class="float-left"
-        />
+        <figure>
+          <img
+            src="./assets/images/social-media-marketing.jpg"
+            class="float-left"
+            alt="A group of people collaborating on the topic of social media "
+          />
+        </figure>
+
         <h2>Social Media Marketing</h2>
         <p>
           Social media continues to have a sizable influence on buying habits.
@@ -74,7 +89,13 @@
     <div class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" />
+        <figure>
+          <img
+            src="./assets/images/lead-generation.png"
+            alt="icon of an arrow and a money symbol"
+          />
+        </figure>
+
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
@@ -82,7 +103,13 @@
       </div>
       <div class="benefit-brand">
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" />
+        <figure>
+          <img
+            src="./assets/images/brand-awareness.png"
+            alt="An icon of a person with a tie and the head of the person is a light bulb"
+          />
+        </figure>
+
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
@@ -90,7 +117,13 @@
       </div>
       <div class="benefit-cost">
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" />
+        <figure>
+          <img
+            src="./assets/images/cost-management.png"
+            alt="A icon of money symbols"
+          />
+        </figure>
+
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
