--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         alt="A group of people gather for a buisness meeting around a table"
       />
     </figure>
-    <div class="content">
-      <div class="search-engine-optimization">
+   <section class="content">
+      <section id="search-engine-optimization" class="search-engine-optimization">
+
         <figure>
           <img
             src="./assets/images/search-engine-optimization.jpg"
@@ -47,8 +48,8 @@
           home. Search Engine Optimization (SEO) allows you to increase your
           visibility and find the right customers for your business.
         </p>
-      </div>
-      <div
+      </section>
+      <section
         id="online-reputation-management"
         class="online-reputation-management"
       >
@@ -67,8 +68,8 @@
           control over what potential customers see when they search for your
           business.
         </p>
-      </div>
-      <div id="social-media-marketing" class="social-media-marketing">
+           </section>
+      <section id="social-media-marketing" class="social-media-marketing">
         <figure>
           <img
             src="./assets/images/social-media-marketing.jpg"
@@ -84,10 +85,11 @@
           to your brand, using analytics to find the right markets and increase
           your lead generation.
         </p>
-      </div>
-    </div>
-    <div class="benefits">
-      <div class="benefit-lead">
+           </section>
+    </section>
+    <section class="benefits">
+      <section class="benefit-lead">
+
         <h3>Lead Generation</h3>
         <figure>
           <img
@@ -100,8 +102,8 @@
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
         </p>
-      </div>
-      <div class="benefit-brand">
+   </section>
+            <section class="benefit-brand">
         <h3>Brand Awareness</h3>
         <figure>
           <img
@@ -114,8 +116,8 @@
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
         </p>
-      </div>
-      <div class="benefit-cost">
+     </section>
+      <section class="benefit-cost">
         <h3>Cost Management</h3>
         <figure>
           <img
@@ -128,8 +130,8 @@
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
         </p>
-      </div>
-    </div>
+           </section>
+    </section>
     <div class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
