--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </section>
     <section class="benefits">
       <section class="benefit-lead">
-
+        <aside>
         <h3>Lead Generation</h3>
         <figure>
           <img
@@ -130,11 +130,12 @@
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
         </p>
+                </aside>
            </section>
     </section>
-    <div class="footer">
+   <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
-    </div>
+    </footer>
   </body>
 </html>
