--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h1>Hori<span class="seo">seo</span>n</h1>
+      <h1>Horiseon</h1>
       <nav class="links">
         <ul>
           <li>
@@ -31,9 +31,8 @@
         alt="A group of people gather for a buisness meeting around a table"
       />
     </figure>
-   <section class="content">
+    <section class="content">
       <section id="search-engine-optimization" class="search-engine-optimization">
-
         <figure>
           <img
             src="./assets/images/search-engine-optimization.jpg"
@@ -68,7 +67,7 @@
           control over what potential customers see when they search for your
           business.
         </p>
-           </section>
+      </section>
       <section id="social-media-marketing" class="social-media-marketing">
         <figure>
           <img
@@ -77,7 +76,6 @@
             alt="A group of people collaborating on the topic of social media "
           />
         </figure>
-
         <h2>Social Media Marketing</h2>
         <p>
           Social media continues to have a sizable influence on buying habits.
@@ -85,7 +83,7 @@
           to your brand, using analytics to find the right markets and increase
           your lead generation.
         </p>
-           </section>
+      </section>
     </section>
     <section class="benefits">
       <section class="benefit-lead">
@@ -97,13 +95,12 @@
             alt="icon of an arrow and a money symbol"
           />
         </figure>
-
-        <p>
-          Inbound strategies for lead generation require less work for your
-          business, bringing customers directly to your website.
-        </p>
-   </section>
-            <section class="benefit-brand">
+          <p>
+            Inbound strategies for lead generation require less work for your
+            business, bringing customers directly to your website.
+          </p>
+      </section>
+      <section class="benefit-brand">
         <h3>Brand Awareness</h3>
         <figure>
           <img
@@ -111,12 +108,11 @@
             alt="An icon of a person with a tie and the head of the person is a light bulb"
           />
         </figure>
-
-        <p>
-          Users find your business through paid and organic searches, increasing
-          the search ranking and visibility for your business.
-        </p>
-     </section>
+          <p>
+            Users find your business through paid and organic searches,
+            increasing the search ranking and visibility for your business.
+          </p>
+      </section>
       <section class="benefit-cost">
         <h3>Cost Management</h3>
         <figure>
@@ -125,17 +121,18 @@
             alt="A icon of money symbols"
           />
         </figure>
-
-        <p>
-          As the search ranking for your business increases, your advertising
-          costs decrease, and you no longer need to advertise your page.
-        </p>
-                </aside>
-           </section>
+          <p>
+            As the search ranking for your business increases, your advertising
+            costs decrease, and you no longer need to advertise your page.
+          </p>
+        </aside>
+      </section>
     </section>
-   <footer class="footer">
+    <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </footer>
   </body>
 </html>
+
+
