updated path of hero image as well as for README page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <figure>
       <img
         class="hero"
-        src="assets/images/digital-marketing-meeting.jpg"
+        src="./assets/images/digital-marketing-meeting.jpg"
         alt="A group of people gather for a buisness meeting around a table"
       />
     </figure>
