added comments to sections of webpage for explanation of refractoring process

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <header>
+        <!-- The header tag will allow the user to easily diffrentiate the intro of the page versus the body -->
       <h1>Horiseon</h1>
+      <!-- These navigation links will help the user know the diffrent contents that are available for reading (table of contents) as well as faster access to those sections as opposed to scrolling -->
       <nav class="links">
         <ul>
           <li>
@@ -25,13 +27,14 @@
       </nav>
     </header>
     <figure>
+        <!-- The alt tags allow those that have difficulty with the image itself to read a description of what the img contains -->
       <img
         class="hero"
         src="./assets/images/digital-marketing-meeting.jpg"
         alt="A group of people gather for a buisness meeting around a table"
       />
     </figure>
-    <section class="content">
+    <section class=" main-content">
       <section id="search-engine-optimization" class="search-engine-optimization">
         <figure>
           <img
@@ -88,6 +91,7 @@
     <section class="benefits">
       <section class="benefit-lead">
         <aside>
+            <!-- The aside semantic will allow special information to be offset to the right for easier reading structure -->
         <h3>Lead Generation</h3>
         <figure>
           <img
@@ -128,6 +132,7 @@
         </aside>
       </section>
     </section>
+    <!-- The footer tag allows the user to diffrentiate the body of the page verus the ending information -->
     <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
